# TheTelephone

./: CMakeLists.in.windows  CMakeLists.txt  CMakeLists.txt.darwin  CODING.md  DEVELOPER.md  LICENSE.md  README.md  doxyfile
demo/binaural_synthesis/: README.md  demo_binaural_synthesis.pd
demo/offline_processing/: README.md  demo_offline_processing.pd
demo/websocket_recv_client/: nodejs_websocket_server_message.js
demo/websocket_recv_server/: demo_client.html  demo_websocket_recv_server.pd
pd-help/: audiorouting~-help.pd  benchmark_delay~-help.pd  convolve_dynamic~-help.pd  delay~-help.pd  denoise_speex~-help.pd  exit-help.pd  g711~-help.pd  gsm~-help.pd  lpc10~-help.pd  opus~-help.pd  readsfnow~-help.pd  speex~-help.pd  vad_speex~-help.pd  websocket_recv-help.pd  websocket_recv_client-help.pd  websocket_recv_server-help.pd  writesfnow~-help.pd
src/connectivity/: websocket_recv.c  websocket_recv_client.c  websocket_recv_server.c
src/degradations/: delay_tilde.c  g711_tilde.c  g722_tilde.c  gsm_tilde.c  lpc10_tilde.c  mnru_tilde.c  opus_tilde.c  speex_tilde.c
src/include/: generic_codec.h  resample.h  ringbuffer.h
src/programming/: cpp_example_tilde.cpp
src/signal-processing/: convolve_dynamic_tilde.c  denoise_speex_tilde.c  ns_speex_tilde  vad_speex_tilde.c
src/support/: audiorouting_tilde.c  benchmark_delay_tilde.c  exit.c  readsfnow_tilde.c  writesfnow_tilde.c
tests/: test_undefined_symbols.c
